[package]
name = "dnote-tui"
description = "TUI for dnote"
keywords = ["tui", "dnote", "ratatui"]
authors = ["Deep Panchal"]
version = "0.2.1"
edition = "2021"
documentation = "https://docs.rs/dnote-tui"
homepage = "https://github.com/deepanchal/dnote-tui"
repository = "https://github.com/deepanchal/dnote-tui"
license = "MIT"
default-run = "dnote-tui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
tui = { package = "ratatui", version = "0.26.0" }
