[package]
name = "dnote-tui"
description = "TUI for dnote"
keywords = ["tui", "dnote", "ratatui"]
authors = ["Deep Panchal <deep302001@gmail.com>"]
version = "0.5.10"
edition = "2021"
documentation = "https://docs.rs/dnote-tui"
homepage = "https://github.com/deepanchal/dnote-tui"
repository = "https://github.com/deepanchal/dnote-tui"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.18", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.15.0"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.30"
human-panic = "2.0.1"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.159"
log = "0.4.22"
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui-input = "0.11.0"

[build-dependencies]
anyhow = "1.0.89"
vergen-gix = { version = "1.0.2", features = ["build", "cargo"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = [
  "precommit-hook",
  "prepush-hook",
  "run-cargo-clippy",
  "run-cargo-fmt",
  "run-cargo-test",
  "run-cargo-check",
] }
